Make statistics by class (#1328)